Update app version to `1.15` and remove unnecessary Maven compiler arguments