@@ -79,11 +79,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-native-access=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
             <!-- Vaadin Plugin handles frontend bundle creation -->
             <plugin>
